--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@nivo/core": "^0.85.1",
     "@nivo/pie": "^0.85.1",
     "@reduxjs/toolkit": "^2.2.1",
+    "@tailwindcss/forms": "^0.5.7",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-datepicker": "^6.2.0",
