--- a/backend/package.json
+++ b/backend/package.json
@@ -17,11 +17,13 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-async-handler": "^1.2.0",
+    "helmet": "^7.1.0",
     "mongoose": "^8.2.1",
     "mongoose-sequence": "^6.0.1",
     "path-to-regex": "^1.3.8"
